@@ -1,33 +1,41 @@
-<fieldset>
+<form tal:omit-tag="not:request/show_form|nothing">
+  <tal:comment condition="nothing">
+    When the requets contains ``show_form`` a form tag is rendered. This
+    supports testing as the testbrowser does only recognise form elements
+    inside a form. In a real browser this snipped is injected in form-tag so
+    there must not be an extra form element.
+  </tal:comment>
+  <fieldset>
 
-  <legend tal:content="view/legend"
-          i18n:translate="">
-    Legend
-  </legend>
+    <legend tal:content="view/legend"
+            i18n:translate="">
+      Legend
+    </legend>
 
-  <div tal:repeat="widget view/widget_data"
-       tal:attributes="class widget/css_class">
-    <div class="label">
-      <label tal:attributes="
-             cms:tooltip widget/widget/hint;
-             for widget/widget/name"
-             tal:content="widget/widget/label"
-             i18n:translate="">
+    <div tal:repeat="widget view/widget_data"
+         tal:attributes="class widget/css_class">
+      <div class="label">
+        <label tal:attributes="
+               cms:tooltip widget/widget/hint;
+               for widget/widget/name"
+               tal:content="widget/widget/label"
+               i18n:translate="">
           Label
-      </label>
-      <div class="error"
-            tal:condition="widget/widget/error"
-            tal:content="structure widget/widget/error">
-        error
+        </label>
+        <div class="error"
+             tal:condition="widget/widget/error"
+             tal:content="structure widget/widget/error">
+          error
+        </div>
       </div>
+      <div class="widget" tal:content="structure widget/widget"/>
     </div>
-    <div class="widget" tal:content="structure widget/widget"/>
-  </div>
 
-  <div class="form-controls" tal:condition="view/availableActions">
-    <input
-      tal:repeat="action view/actions"
-      tal:replace="structure action/render" />
-   </div>
+    <div class="form-controls" tal:condition="view/availableActions">
+      <input
+        tal:repeat="action view/actions"
+        tal:replace="structure action/render" />
+    </div>
 
-</fieldset>
+  </fieldset>
+</form>
